Disable some mostly cosmetic compiler warnings
We are not going to fix compiler warnings in a security-fix-only
branch: it's too much regression risk for too little benefit. If they
demonstrate a security bug, then we'll backport the fix for the
security bug.

Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>

--- a/configure.ac
+++ b/configure.ac
@@ -1353,6 +1353,8 @@ TP_COMPILER_WARNINGS([WARNING_CFLAGS],
    sign-compare \
    pointer-sign \
    type-limits \
+   misleading-indentation \
+   unused-const-variable \
   ])
 
 if test "x$GCC" = "xyes"; then
