Autotools build: Use pkg-config to find libexpat
The version of expat that added the .pc file was released in 2012.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=69801
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>

--- a/bus/Makefile.am
+++ b/bus/Makefile.am
@@ -6,7 +6,7 @@ systemdsysusersdir = $(prefix)/lib/sysusers.d
 
 DBUS_BUS_LIBS = \
 	$(CODE_COVERAGE_LDFLAGS) \
-	$(XML_LIBS) \
+	$(EXPAT_LIBS) \
 	$(SELINUX_LIBS) \
 	$(APPARMOR_LIBS) \
 	$(THREAD_LIBS) \
@@ -16,7 +16,7 @@ DBUS_BUS_LIBS = \
 
 DBUS_LAUNCHER_LIBS = \
 	$(CODE_COVERAGE_LDFLAGS) \
-	$(XML_LIBS) \
+	$(EXPAT_LIBS) \
 	$(THREAD_LIBS) \
 	$(NETWORK_libs) \
 	$(NULL)
@@ -25,7 +25,7 @@ AM_CPPFLAGS = \
 	$(CODE_COVERAGE_CPPFLAGS) \
 	-I$(top_srcdir) \
 	$(DBUS_STATIC_BUILD_CPPFLAGS) \
-	$(XML_CFLAGS) \
+	$(EXPAT_CFLAGS) \
 	$(APPARMOR_CFLAGS) \
 	-DDBUS_SYSTEM_CONFIG_FILE=\""$(dbusdatadir)/system.conf"\" \
 	-DDBUS_COMPILATION \
