AppArmor test: Allow writing to our temporary XDG_RUNTIME_DIR
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=100686

--- a/test/data/dbus-installed-tests.aaprofile.in
+++ b/test/data/dbus-installed-tests.aaprofile.in
@@ -31,6 +31,7 @@
 
   # We aren't really confining this process seriously; allow most things.
   /** mrix,
+  /tmp/dbus-daemon-test.*/{,**} w,
   @{sys}/kernel/security/apparmor/** w,
   dbus (send, receive, bind),
   network,
