test/dbus-daemon: Exercise the Peer interface
We have to skip the GetMachineId() part during build-time testing
if it wouldn't work - there is no guarantee that dbus has ever been
installed on the build system. However, we can insist on it during
installed-tests, if we make sure to complete the installation for the
Travis-CI build by running dbus-uuidgen.

Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=101257

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -238,6 +238,7 @@ installcheck_environment = \
 	export DBUS_TEST_EXEC=@abs_top_builddir@/test; \
 	export DBUS_TEST_HOMEDIR=@abs_top_builddir@/dbus; \
 	export DBUS_TEST_DATADIR=$(DESTDIR)$(datadir); \
+	export DBUS_TEST_UNINSTALLED=1; \
 	${NULL}
 
 # Tests in bus/config-parser.c rely on these specific values for XDG_* and
@@ -256,6 +257,7 @@ AM_TESTS_ENVIRONMENT = \
 	export DBUS_TEST_DATA=@abs_top_builddir@/test/data; \
 	export DBUS_TEST_EXEC=@abs_top_builddir@/test; \
 	export DBUS_TEST_HOMEDIR=@abs_top_builddir@/dbus; \
+	export DBUS_TEST_UNINSTALLED=1; \
 	$(NULL)
 
 manual_authz_SOURCES = manual-authz.c
